<resources>
    <string name="app_name">Foodlife</string>
    <string name="title_home">Home</string>
    <string name="title_collection">Collections</string>
    <string name="title_profile">Profile</string>
    <string name="title_plan_meals">Plan meals</string>
    <string name="txt_your_plan">Your plan</string>
    <string name="txt_today">Today</string>
    <string name="txt_today_time">10th June, 2022</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="txt_lunch">Lunch</string>
    <string name="txt_dinner">Dinner</string>
    <string name="txt_snacks">Snacks</string>
    <string name="txt_search_recipe">Search your recipes</string>
    <string name="txt_no_dish">No dish have been selected for this meal.</string>
    <string name="title_add_recipe_Title">Title</string>
    <string name="title_add_recipe_Information">Information</string>
    <string name="title_add_recipe_Ingredient">Ingredients</string>
    <string name="title_add_recipe_Direction">Directions</string>
    <string name="title_add_recipe">Add recipe</string>

    <string name="txt_serves">Serves</string>
    <string name="txt_preparationTime">Preparation time</string>
    <string name="txt_cookingTime">Cooking time</string>
    <string name="txt_difficulty">Difficulty</string>
    <string name="txt_minute">min</string>


    <string name="txt_Easy">Easy</string>
    <string name="txt_Medium">Medium</string>
    <string name="txt_Hard">Hard</string>
    <string name="txt_no_dish_cart">Please select as least one meal to calculate the ingredients!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate_ingredients">Calculate Ingredients</string>
    <string name="txt_dishes">Dishes</string>
    <string name="total">Total</string>
    <string name="txt_serve">Serves</string>
    <string name="quantity_01">1</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_25">25</string>
    <string name="selected_day">Selected day</string>
    <string name="have_plan_day">Have a plan day</string>
    <string name="no_plan_day">No plan day</string>
    <string name="calendar_warning">Note: User can only view plans from 7 days before or 7 days in the future.</string>
    <string name="txt_recipe_name">Recipe name</string>
    <string name="txt_description">Description</string>
    <string name="optional">Options</string>
    <string name="add_current_meal_to_the_plan">Add current meal to the plan</string>
    <string name="select_a_plan_date">Select a plan</string>
    <string name="choose_the_meal_you_want_to_add_this_dish">Choose the meal you want to add to \'13/07/2022\' plan?</string>
    <string name="confirm">Confirm</string>
    <string name="txt_ingredient">Ingredient</string>
    <string name="txt_add_ingredient">Add ingredient</string>
    <string name="txt_add_btn">Add</string>
    <string name="txt_add_direction">Add Direction</string>
    <string name="txt_continue_btn">Continue</string>
    <string name="txt_direction">Direction</string>
    <string name="warning_less_01">Number of people to serves can\'t be less than 1!</string>
    <string name="exceed_max">Exceeds the maximum number of people</string>
    <string name="add_to_cart">Add to cart</string>
</resources>