<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.foodlife.view_models.PlanViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp"
            tools:context=".fragments.PlanFragment">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_ingredients"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txt_today"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/text_header"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBack" />

            <TextView
                android:id="@+id/tvDateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_today_time"
                android:fontFamily="@font/poppins_light"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/primary_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <TextView
                android:id="@+id/tvTotalDishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txt_dishes"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDateInfo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTotalDishes"
                android:nestedScrollingEnabled="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalDishes"
                tools:itemCount="1"
                tools:listitem="@layout/item_recipe_type" />
            <TextView
                tools:visibility="visible"
                android:id="@+id/tvTotalDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="2"
                android:gravity="start"
                android:ellipsize="end"
                android:text="@string/txt_no_dish_cart"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_normal"
                android:visibility="gone"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvTotalDishes" />

            <ImageView
                android:id="@+id/ivCollapse"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:src="@drawable/shopping_cart"
                app:layout_constraintBottom_toBottomOf="@id/tvTotalDishes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTotalDishes"
                tools:ignore="ContentDescription" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>