<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    tools:context=".fragments.AddRecipeTitleFragment">

    <RelativeLayout
        android:id="@+id/AR_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/title_add_recipe"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <!--    <RelativeLayout
            android:id="@+id/AR_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/AR_header"
            android:layout_marginTop="30dp">

        </RelativeLayout>-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AR_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/AR_basic_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvARInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title_add_recipe_Title"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvARPage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="24dp"
                android:background="@drawable/addrecipe_roundedcorner_2"
                android:backgroundTint="@color/secondary_100"
                android:fontFamily="@font/poppins_light"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="1/4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvARInformation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvARInformation" />

            <EditText
                android:id="@+id/et_RecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvARInformation"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/addrecipe_roundedcorner_2"
                android:ellipsize="end"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/txt_recipe_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tvARInformation" />

            <EditText
                android:id="@+id/et_Description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/et_RecipeName"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/addrecipe_roundedcorner_2"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:hint="@string/txt_description"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/et_RecipeName"
                tools:layout_editor_absoluteX="24dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_uploadimage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/et_Description"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/et_Description">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_image_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@drawable/addrecipe_roundedcorner_2"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_placeholder" />

                    <ImageView
                        android:id="@+id/iv_uploadimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clickable="true"
                        android:contentDescription="Upload image"
                        android:src="@drawable/plus_bold" />

                    <TextView
                        android:id="@+id/tv_upload_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_uploadimage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Upload your profile picture"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_uploadimage"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/addrecipe_roundedcorner_2"
                android:backgroundTint="@color/secondary_100"
                android:fontFamily="@font/poppins_regular"
                android:padding="12dp"
                android:paddingTop="14dp"
                android:text="@string/txt_continue_btn"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/secondary_100"
                app:layout_constraintTop_toBottomOf="@+id/cv_uploadimage" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>